# match-metrics

api/: app.py  pyproject.toml
api/soccer/: draw.py  match.py  pass_event.py  player.py
app/: .eslintrc.js  package-lock.json  package.json
app/.meteor/: packages  versions
app/client/: style.css
app/imports/api/event/: Event.js
app/imports/api/player/: Player.js
app/imports/api/team/: Team.js
app/imports/api/video/: Video.js
app/imports/startup/server/: Accounts.js  Method.js  Mongo.js  Pdf.js  Publications.js
app/imports/ui/components/: EditPlayer.js  Event.jsx  Footer.jsx  NavBar.jsx  PdfReader.jsx  StatsTable.jsx  TeamProfile.jsx
app/imports/ui/layouts/: App.jsx
app/imports/ui/pages/: AddEvent.jsx  AddPlayer.jsx  AddTeam.jsx  CalendarPage.jsx  EditPlayer.jsx  EventPage.jsx  Landing.jsx  Mapsearch.jsx  Team.jsx  VideoProcess.jsx
app/imports/ui/pages/admin/: AdminDashboard.jsx
app/imports/ui/pages/all/: PlayerStatsPage.jsx  SignIn.jsx  SignUp.jsx  Support.jsx
app/imports/ui/pages/manager/: ManagerAnalysis.jsx  ManagerDashboard.jsx  ManagerSettings.jsx  PendingApproval.jsx  TeamManagement.jsx
app/imports/ui/pages/team/: CalendarPage.jsx  Communication.jsx
app/imports/ui/pages/user/: UserAnalysis.jsx  UserCommunication.jsx  UserDashboard.jsx  UserRoster.jsx  UserSettings.jsx
app/server/: main.js
config/: cors-config.json  settings.development.json
